added method for getting knn from both the quick sort and heap sort algorithms

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <style>
-      /* now control your map size in plain CSS */
+      /*control map size in plain CSS */
       #map {
         width: 100%;
         height: 400px;
